fixes for expand/collapse buttons

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -3094,6 +3094,23 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	max-width: calc(100% - 2px);
 }
 
+.charsheet .mount_gear-grid input.section-toggle-checkbox[type="checkbox"]:checked::after {
+	display: none;
+	content: '';
+}
+
+.charsheet .section-toggle-checkbox:not(:checked) ~ .column-header > span {
+	margin: 0 0 0 -1.2em;
+}
+
+.charsheet .mount_gear-grid .section-toggle-checkbox:not(:checked) ~ .mount_gear-box4.column-header > span:first-of-type {
+	margin: 0 0 0 0;
+}
+
+.charsheet .mount_gear-grid .section-toggle-checkbox:not(:checked) ~ .mount_gear-box4.column-header > span:last-of-type {
+	margin: 0 .5em 0 -.5em;
+}
+
 .charsheet .talents-box {
 	grid-column: 1/4;
 	grid-row-start: 1;
@@ -4231,17 +4248,17 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	display: grid;
 	grid-column-gap: 2px;
 	grid-row-gap: 2px;
-	grid-template-columns: 2.5em auto 3em 3em 5.5em 6em 11.5em;
+	grid-template-columns: 2.5em auto 3em 3em 3em 5em 6em 6em .85em 3em;
 }
 
-.charsheet .spells-box6 > div > .input {
+.charsheet .spells-box7 > div > .input {
 	align-items: center;
 	display: flex;
 	justify-content: space-around;
 }
 
 .charsheet .spells-box {
-	grid-column: 1/8;
+	grid-column: 1/11;
 	grid-row-start: 1;
 }
 
@@ -4281,7 +4298,22 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 }
 
 .charsheet .spells-box7 {
-	grid-column: 1/8;
+	grid-column: 8;
+	grid-row-start: 1;
+}
+
+.charsheet .spells-box8 {
+	grid-column: 9;
+	grid-row-start: 1;
+}
+
+.charsheet .spells-box9 {
+	grid-column: 10;
+	grid-row-start: 1;
+}
+
+.charsheet .spells-box10 {
+	grid-column: 1/11;
 	grid-row-start: 2;
 }
 
@@ -5094,6 +5126,16 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	line-height: 1.2em;
 }
 
+.sheet-rolltemplate-forbiddenlands .sheet-template-grid-item span.sheet-label .sheet-results {
+	font-size: 1.85em;
+	font-weight: normal;
+	margin: 0 2px 0 2px;
+}
+
+.sheet-rolltemplate-forbiddenlands span.sheet-label:has(.sheet-results) {
+	white-space: nowrap;
+}
+
 .sheet-rolltemplate-forbiddenlands .sheet-template-grid-item.sheet-template-span-six.sheet-template-header:empty {
 	display: none;
 }
@@ -5108,6 +5150,8 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	margin: 0 -5px 0 -5px;
 	padding: 0 2px 0 2px;
 }
+
+
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice ~ .sheet-template-span-left,
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice ~ .sheet-template-span-center,
@@ -5190,6 +5234,19 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 .sheet-rolltemplate-darkmode.sheet-rolltemplate-forbiddenlands .sheet-template-grid-item.sheet-template-hide-dice-labels {
 	background-color: #000;
 	color: #000;
+}
+
+.sheet-rolltemplate-forbiddenlands .sheet-image-inline-success {
+	background-image: url('https://imgsrv.roll20.net/?src=https%3A//raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Forbidden_Lands/images/success_swords_black.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: inline-block;
+	height: 1.25em;
+	width: 1.25em;
+	border: 1px solid #000;
+	border-radius: 4px;
+	box-shadow: -1px 1px 3px #333;
+	margin: 0 0 -3px 3px;
 }
 
 .sheet-template-grid-item.sheet-template-span-six:last-child {
